tooling/nargo_cli/tests/snapshots/execution_failure/dynamic_index_composite_failure/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds, array has size 2, but index was 10
  ┌─ src/main.nr:3:5
  │
3 │     a[i].1
  │     ----
  │
  = Call stack:
    1: main
            at src/main.nr:3:5

Failed assertion
